--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -20,10 +20,56 @@ body {
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
 }
 
+button { 
+    position: relative; /* Gotta be this so elements stay within limits of sanity */
+    width: 125px;
+    height: 40px;
+    text-align: center;
+    background: #FF5722;
+    font-size: 18px;
+    font-weight: bolder;
+    color: white;
+    border-radius: 60px;
+    border: 4px solid #E64A19;
+    box-shadow: inset 0 0 30px rgba(255, 87, 34, 0.5);
+    overflow: hidden; /* Helps keep the sun outta of our eyes */
+  } 
+
+  button::before { 
+    content: ""; 
+    position: absolute; 
+    top: 0; 
+    left: 10px; 
+    width: 70%; 
+    height: 100%; 
+    background: rgba(255, 255, 255, 0.25); 
+    transition: 0.5s; 
+    transform: skewX(-15deg); 
+  } 
+  button:hover::before { 
+    left: 190px; 
+  } 
+
+  button::after { 
+    content: ""; 
+    position: absolute; 
+    top: 0; 
+    left: -70px; 
+    width: 50px; 
+    height: 100%; 
+    background: rgba(255, 255, 255, 0.1); 
+    transition: 0.5s; 
+    transform: skewX(-15deg); 
+  } 
+  button:hover::after { 
+    left: 190px; 
+}
+
 .topBox {
     width: 100%;
     background-color: #fa4616;
     color: white;
+    font-size: 18px;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
@@ -34,12 +80,8 @@ body {
     background-color: gray;
     padding-top: 20px;
     padding-bottom: 20px;
+    text-align: center;
 }
-
-.midBox p {
-    display: inline-block;
-    margin: 0 10px;
-  }
 
 .columns {
     display: flex;
@@ -56,8 +98,7 @@ body {
     flex: 1;
 }
 
-.color-new { color: white; }
-.color-running { color: green; }
-.color-ready { color: yellow; }
-.color-waiting { color: orange; }
-.color-terminated { color: red; }
+.column3 {
+    background-color:  #1D376A;
+    flex: 1;
+}
