--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,12 +1,12 @@
 html {
-    background-color: rgba(27, 38, 54, 1);
+    background-color: rgba(255, 255, 255, 1);
     text-align: center;
     color: white;
 }
 
 body {
     margin: 0;
-    color: white;
+    color: black;
     font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -22,7 +22,7 @@ body {
 
 button { 
     position: relative; /* Gotta be this so elements stay within limits of sanity */
-    width: 125px;
+    width: 140px;
     height: 40px;
     text-align: center;
     background: #FF5722;
@@ -70,6 +70,7 @@ button {
     background-color: #fa4616;
     color: white;
     font-size: 18px;
+    font-weight: bold;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
@@ -77,7 +78,7 @@ button {
 
 .midBox {
     width: 100%;
-    background-color: gray;
+    background-color: black;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
@@ -85,7 +86,7 @@ button {
 
 .midBox p {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 15px;
   }
 
 .columns {
@@ -94,12 +95,12 @@ button {
     height: 900px;
 }
 .column1 {
-    background-color: #1D374A;
+    background-color: #CCCCCC;
     flex: 1;
 }
 
 .column2 {
-    background-color: #1D375A;
+    background-color: #FFFFFF;
     flex: 1;
 }
 
@@ -108,3 +109,36 @@ button {
 .color-ready { color: yellow; }
 .color-waiting { color: orange; }
 .color-terminated { color: red; }
+
+.legend {
+  display: flex;
+  gap: 70px;
+  margin-top: 0px;
+  padding: 10px;
+  font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-weight: bold;
+  background: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  gap: 6px;
+  color: black;
+}
+
+.color-box {
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 4px;
+}
+
